<resources>
    <string name="app_name">MtsApplication</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Login</string>

    <string name="sign_in">Sign in</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>

    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="go_to_register_page">Go to register page</string>


</resources>