<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    tools:context=".activities.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signin"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50sp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/signin"
        android:background="@color/back"
        android:hint="@string/username"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:layout_margin="10sp"
        android:padding="20sp"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:background="@color/back"
        android:hint="@string/password"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:layout_margin="10sp"
        android:padding="20sp"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20sp"
        android:inputType="textPassword"/>


    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginbtn"
        android:layout_below="@id/password"
        android:text="@string/login"
        android:backgroundTint="@color/medgrey"
        android:layout_centerHorizontal="true"
        android:layout_margin="10sp"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:id="@+id/adminbtn"
        android:layout_below="@id/loginbtn"
        android:text="Войти как диспетчер"
        android:backgroundTint="@color/medgrey"
        android:layout_centerHorizontal="true"
        android:layout_margin="10sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/go_to_register_page"
        android:id="@+id/linkregister"
        android:layout_below="@id/adminbtn"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"

        android:layout_height="wrap_content" />






</RelativeLayout>