<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    tools:context=".activities.LoginActivity">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/register"
      android:text="@string/register"
      android:textColor="@color/black"
      android:textSize="35sp"
      android:textStyle="bold"
      android:layout_margin="50sp"
      android:gravity="center"/>

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/name"
      android:layout_below="@id/register"
      android:background="@color/back"
      android:hint="@string/name"
      android:textColorHint="@color/grey"
      android:textColor="@color/black"
      android:layout_margin="10sp"
      android:padding="20sp"
      android:drawableStart="@drawable/ic_baseline_person_outline_24"
      android:drawablePadding="20sp"/>

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/age"
      android:layout_below="@id/name"
      android:background="@color/back"
      android:hint="@string/age"
      android:textColorHint="@color/grey"
      android:textColor="@color/black"
      android:layout_margin="10sp"
      android:padding="20sp"
      android:drawableStart="@drawable/ic_baseline_person_outline_24"
      android:drawablePadding="20sp"/>

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/username"
      android:layout_below="@id/age"
      android:background="@color/back"
      android:hint="@string/username"
      android:textColorHint="@color/grey"
      android:textColor="@color/black"
      android:layout_margin="10sp"
      android:padding="20sp"
      android:drawableStart="@drawable/ic_baseline_person_outline_24"
      android:drawablePadding="20sp"/>

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/password"
      android:layout_below="@id/username"
      android:background="@color/back"
      android:hint="@string/password"
      android:textColorHint="@color/grey"
      android:textColor="@color/white"
      android:layout_margin="10sp"
      android:padding="20sp"
      android:drawableStart="@drawable/ic_baseline_info_24"
      android:drawablePadding="20sp"
      android:inputType="textPassword"/>
  <ProgressBar
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:id="@+id/progressBar"
      android:layout_below="@id/password"
      android:layout_centerHorizontal="true"
      />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/registerbtn"
      android:layout_width="2005sp"
      android:layout_height="60sp"
      android:layout_below="@id/password"
      android:layout_centerHorizontal="true"
      android:layout_marginStart="50sp"
      android:layout_marginLeft="50sp"
      android:layout_marginTop="50sp"
      android:layout_marginEnd="50sp"
      android:layout_marginRight="50sp"
      android:layout_marginBottom="50sp"
      android:backgroundTint="@color/medgrey"
      android:text="@string/register" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/forgotpass"
      android:layout_below="@id/registerbtn"
      android:text="@string/forgot_password"
      android:textColor="@color/white"
      android:layout_centerHorizontal="true"
      android:layout_margin="5sp"/>





</RelativeLayout>